Fix navbar styles by setting justify-content to space-between, stretch item with flex:1 and adding padding to match the design

--- a/src/components/NavLayout/NavLayout.module.css
+++ b/src/components/NavLayout/NavLayout.module.css
@@ -9,6 +9,6 @@
 
 @media (min-width: 600px) {
   .layout {
-    padding: 0 2.5rem; /* 40px */
+    padding: 0 0 0 2.5rem; /* 40px */
   }
 }
